# lights-backend

./: .gitignore  README.md  docker-compose.yml  nock_led_test.py  pyproject.toml  requirements.txt  test_ytdlp.py
.yt-dlp-cache/deno/: dep_analysis_cache_v2-shm  dep_analysis_cache_v2-wal  node_analysis_cache_v2  node_analysis_cache_v2-shm  node_analysis_cache_v2-wal
.yt-dlp-cache/youtube-sigfuncs/: 50cc0679-main-108.json  50cc0679-main-112.json
app/: main.py
app/api/: deps.py  routes_audio.py  routes_esp.py  routes_media.py  routes_player.py  routes_playlist.py  routes_status.py  routes_ws.py  routes_ws_esp.py
app/audio/: analyzer.py
app/core/: config.py  logging.py
app/db/: mongo.py
app/models/: effects.py  esp.py  events.py  player.py  playlist.py  status.py  timeline.py
app/pipeline/: manager.py
app/services/: audio_analysis.py  audio_analyzer.py  effect_engine.py  effects_timeline.py  esp_client.py  esp_udp.py  openai_client.py  pipeline_dispatcher.py  player_clock.py  player_executor.py  playlist_executor.py  presentation_pipeline.py  timeline_resolver.py  youtube_pipeline.py
app/services/effects/: base.py  beat_tracker.py  engine.py  interpolator.py  output.py  pulse.py  segments.py  strobe.py  utils.py  vu.py  wave.py
app/state/: player_state.py  playlist_state.py  redis_keys.py  redis_state.py
app/workers/: background.py
app/ws/: broadcaster.py  esp_hub.py  manager.py
cookies/: youtube.txt
