[project]
name = "led-show-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "redis>=5.0.0",
  "pymongo>=4.7.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  "yt-dlp>=2025.1.0",
  "librosa>=0.10.2",
  "soundfile>=0.12.1",
  "numpy>=2.0.0"
]

[tool.uvicorn]
factory = false

[tool.pytest.ini_options]
testpaths = ["tests"]
